--- a/main.tex
+++ b/main.tex
@@ -931,18 +931,6 @@ Provaremos a primeira afirmação pois a segunda é análoga.
 \textcolor{red}{AULA DE 19 DE AGOSTO (COLOCAREI ASSIM QUE CONSEGUIR)}
 Blá blá blá
 
-\begin{lema}
-Sejam $\lambda_1, \ldots, \lambda_n \in \Spec(T),$ com $\lambda_i \neq \lambda_j.$
-\begin{enumerate}
-    \item Se $v_1 + \ldots + v_r = 0,$ com $v_i \in V_T(\lambda_i),$ então $v_1 = \ldots = v_r = 0.$
-    \item Se $B_i \subseteq V_T(\lambda_i)$ são subconjuntos LI, então
-    \[
-    B = \bigcup\limits_{i = 1}^r B_i
-    \]
-    é LI.
-\end{enumerate}
-\end{lema}
-
 \chapter{Formas Canônicas}
 
 \section{Autovalores e Autovetores}
@@ -1044,7 +1032,7 @@ Seja \(\{\lambda_i\}_{i\in [k]}\subseteq\text{Spec}(T).\)
 \begin{proof}[Demonstração do Lema]
 \begin{enumerate}\hfill
     \item Considere \(\lambda_1(v_1+\ldots+v_k)\). Aplicando \(T\)..
-    \item
+    \item Alguma coisa
 \end{enumerate}
 
 \end{proof}
