--- a/main.tex
+++ b/main.tex
@@ -929,7 +929,7 @@ Para cada $j\in n$, então vale:
 Provaremos a primeira afirmação pois a segunda é análoga.
 \end{proof}
 \textcolor{red}{AULA DE 19 DE AGOSTO (COLOCAREI ASSIM QUE CONSEGUIR)}
-Blá blá blá
+Bláa blá blá
 
 \chapter{Formas Canônicas}
 
