Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1030,9 +1030,8 @@ Seja \(\{\lambda_i\}_{i\in [k]}\subseteq\text{Spec}(T).\)
 \end{enumerate}
 \end{lema}
 \begin{proof}[Demonstração do Lema]
-\begin{enumerate}\hfill
+\begin{enumerate}
     \item Considere \(\lambda_1(v_1+\ldots+v_k)\). Aplicando \(T\)..
-    \item Alguma coisa
 \end{enumerate}
 
 \end{proof}
