--- a/main.tex
+++ b/main.tex
@@ -928,7 +928,8 @@ Para cada $j\in n$, então vale:
 \begin{proof}
 Provaremos a primeira afirmação pois a segunda é análoga.
 \end{proof}
-\textcolor{red}{AULA DE 19 DE AGOSTO (COLOCAREI ASSIM QUE CONSEGUIR)}
+\textcolor{red}{AULA DE 19 DE AGOSTO (COLOCAREI ASSIM QUE CONSEGUIR)- FICOU
+  FALTANDO A PROVA DA REGRA DE LAPLACE E A PARTE DE MATRIZES SOBRE ANEIS COMUTATIVOS}
 Bláa blá blá
 
 \chapter{Formas Canônicas}
@@ -1054,7 +1055,7 @@ Seja \(\{\lambda_i\}_{i\in [k]}\subseteq\text{Spec}(T).\)
        \(V_T(\lambda_i)\cap V_T(\lambda_j)=\{0\}\) sempre que \(i,j\in [k]\) e
        \(i\not=j\) e então podemos escrever
        \[\sum_{v\in S}\alpha_iv_i=\sum_{v\in S_1}\alpha_v v+\ldots+\sum_{v\in
-           S_k},\]
+           S_k}\alpha_vv,\]
        onde \(S_i\subseteq B_i\) é finito para cada \(i\in [k]\). Utilizan
        do o fato de que o termo \mbox{\(\sum_{v\in S_i}\alpha_v v\in V_T(\lambda_i)\)}
        para cada \(i\in [k]\) e aplicando o item anterior, obtemos que
@@ -1067,9 +1068,14 @@ Seja \(\{\lambda_i\}_{i\in [k]}\subseteq\text{Spec}(T).\)
 \end{proof}
 
 \begin{proof}
-Temos o seguinte:
-\begin{itemize}
-\item (i)$\Rightarrow$(ii) Sejam $(v_{i,j})_{j\in n_i}$ autovetores associados a $\lambda_i$ tais que $\lambda$ 
+\begin{itemize}\hfill
+\item (i)$\Rightarrow$(ii): Sejam $(v_{i,j})_{j\in n_i}$ autovetores associados
+  a $\lambda_i\in\text{Spec}(T)$\textcolor{red}{TERMINAR ESSA IMPLICAÇÃO}  
+\item (ii)\(\Rightarrow\)(iii):\[\text{dim}(V_T(\lambda_1))+\ldots +\text{dim}(V_T(\lambda_k))=n_1+\ldots +n_k=\text{deg}(p_T(t))=\text{dim}(V)=n.\]
+\item (iii)\(\Rightarrow\)(i): Para cada \(i\in [k]\) considere uma base \(B_i\)
+  de \(V_T(\lambda_i)\). Seja \(B=\bigcup_{i\in [k]}B_i\). Pelo lema anterior,
+  temos que \(B\) é L.I. Como \(\vert B\vert =n\) segue que \(B\) é uma base de
+  \(V\). Além disso, \(B\) é uma base de autovetores de \(T\). Logo, \(T\) é diagonalizável.
 \end{itemize}
 \end{proof}
 
