--- a/main.tex
+++ b/main.tex
@@ -1153,7 +1153,7 @@ Já sabemos que $m_T(t)=\left(\prod_{i\in r}(t-\lambda_i)^{k_i}\right)$ em que $
 
 \section{Subespaços Invariantes}
 
-\begin{definicao}
+\begin{definicao}\index{Subespaço invariante}
 Seja $T\in\mathcal{L}(V)$. Um subespaço $W\subseteq V$ chama-se \textbf{$T$-invariante} se $T[W]\subseteq W$.
 \end{definicao}
 
