--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -1,9 +1,4 @@
-\usepackage[brazilian]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{amsthm}
+\usepackage{common}
 \usepackage{multicol}
 \usepackage{calligra}
 \usepackage{calrsfs}
@@ -12,9 +7,7 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{float}
 \usepackage{tikz}
-%\newtheorem*{defi}{Definição}
 \newtheorem*{pro}{Proposição}
-%\newtheorem*{teo}{Teorema}
 \theoremstyle{remark}
 \newtheorem*{prv}{Demonstração}
 \usepackage{mathtext}
@@ -28,52 +21,19 @@
 \usepackage{mathtools}
 \usepackage{tikz}
 \usepackage{setspace}
-\usepackage{geometry}
-\usepackage{amsmath}
-\usepackage{verbatim}
-\usepackage{amsthm}
-%\usepackage[bottom=2cm,top=3cm,left=3cm,right=2cm]{geometry}
-\usepackage[utf8]{inputenc}
 \usepackage{mathtext}
-\usepackage{graphicx}
-\usepackage{bbm}
 \usepackage{wrapfig}
 \usepackage{cancel}
-\usepackage[T1]{fontenc}
 \usepackage{blindtext}
 \usepackage{tasks}
-\usepackage{mathtools}
 \usepackage{tikz}
 \usepackage{setspace}
-\usepackage{amsmath}
-\usepackage{geometry}
-\usepackage{amsmath}
-\usepackage{amsthm}
-\usepackage{amsfonts}
 \usepackage{lipsum}
-\usepackage{amssymb}
 \usepackage{multicol}
-\usepackage{mathtools}
-\usepackage{colorspace}
-\usepackage{graphicx, color}
-\newcommand{\Conv}{{\rm Conv}}  %envória convexa
-\newcommand{\mdc}{{\rm mdc}}
-\newcommand{\sgn}{{\rm sgn}}
-\newcommand{\sen}{{\rm sen}}
-\newcommand{\tg}{{\rm tg}}
-\newcommand{\mmc}{{\rm mmc}}
-%\newcommand{\mdc}{{\rm mdc}}
-\newcommand{\cotg}{{\rm cotg}}
-\newcommand{\cossec}{{\rm cossec}}
-\newcommand{\Spec}{{\rm Spec}}
-\newcommand{\Ker}{{\rm Ker}}
-\newcommand{\arctg}{{\rm arctg}}
-\newcommand{\arcsen}{{\rm arcsen}}
-\newcommand{\dropsign}[1]{\smash{\llap{\raisebox{-.5\normalbaselineskip}{$#1$\hspace{2\arraycolsep}}}}}%divisão polinomial
-\newcommand{\negrito}[1]{\mbox{\boldmath{$#1$}}} 
 \usepackage{pifont}
-\newcommand{\heart}{\ensuremath\heartsuit}
-\newcommand{\diamonde}{\ensuremath\diamondsuit}
+
+
+%% ----------- Exercício e etc ------------- %%%
 \newtheorem{definicao}{Definição}
 \newtheorem{obs}{Observação}
 \newtheorem{proposicao}{Proposição}
@@ -162,25 +122,5 @@ framexleftmargin=10pt,
 framexrightmargin=10pt
 }
 
-%Naipes
 
 
-\DeclareSymbolFont{extraup}{U}{zavm}{m}{n}
-\DeclareMathSymbol{\varheart}{\mathalpha}{extraup}{86}
-\DeclareMathSymbol{\vardiamond}{\mathalpha}{extraup}{87}
-
-
-%Cores
-%https://www.colorspire.com/rgb-color-wheel/
-
-
-\definecolor{Floresta}{rgb}{0.13,0.54,0.13}
-\definecolor{Rosadif}{rgb}{0.6196,0.1254,0.6980} %9E20B2
-
-\definecolor{Rosa}{rgb}{0.8705, 0.0862, 0.5058} %DE1681
-\definecolor{Verdeest}{rgb}{0.0549, 0.7529, 0.1450} %14C025
-\definecolor{Verde}{rgb}{0.1254,0.70196,0.1254} %20B320
-
-\definecolor{OrangeRed}{rgb}{0.9294,0.0509,0.3529} %ED135A
-\definecolor{Laranja}{rgb}{1,0.4352941176, 0}  %FF6F00
-\definecolor{Amarelo}{rgb}{0.9215, 0.8196, 0.18}   %EBD12E
