--- a/common.sty
+++ b/common.sty
@@ -24,6 +24,7 @@
 
 \usepackage{colorspace}
 \usepackage{graphicx,color}
+\usepackage{xcolor}
 %% -------- https://www.colorspire.com/rgb-color-wheel/ -------------%%
 \definecolor{Floresta}{rgb}{0.13,0.54,0.13}
 \definecolor{Rosadif}{rgb}{0.6196,0.1254,0.6980} %9E20B2
@@ -67,3 +68,4 @@
 \newcommand{\arcsen}{{\rm arcsen}}
 \newcommand{\dropsign}[1]{\smash{\llap{\raisebox{-.5\normalbaselineskip}{$#1$\hspace{2\arraycolsep}}}}}%divisão polinomial
 \newcommand{\negrito}[1]{\mbox{\boldmath{$#1$}}} 
+\newcommand{\m}[2]{\mathcal{M}_{#1}(#2)}
