--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -4,28 +4,24 @@
 \usepackage{calrsfs}
 \usepackage[mathscr]{euscript}
 \usepackage{graphicx, caption}
-\usepackage[dvipsnames]{xcolor}
+
 \usepackage{float}
-\usepackage{tikz}
+
 \newtheorem*{pro}{Proposição}
 \theoremstyle{remark}
 \newtheorem*{prv}{Demonstração}
 \usepackage{mathtext}
 \usepackage{commath}
 \usepackage{todo}
-\usepackage{bbm}
 \usepackage{wrapfig}
 \usepackage{cancel}
 \usepackage{blindtext}
 \usepackage{tasks}
-\usepackage{mathtools}
-\usepackage{tikz}
 \usepackage{setspace}
 \usepackage{mathtext}
 \usepackage{wrapfig}
 \usepackage{cancel}
 \usepackage{blindtext}
-\usepackage{tasks}
 \usepackage{tikz}
 \usepackage{setspace}
 \usepackage{lipsum}
@@ -33,7 +29,7 @@
 \usepackage{pifont}
 
 
-%% ----------- Exercício e etc ------------- %%%
+%% ----------- Teoremas, Exercícios e Etc ------------- %%%
 \newtheorem{definicao}{Definição}
 \newtheorem{obs}{Observação}
 \newtheorem{proposicao}{Proposição}
@@ -43,13 +39,9 @@
 \setlength{\parindent}{0pt}
 \newcommand{\Nil}{\mathrm{Nil }}
 
-\usepackage[mark,raisemark=0.97\paperheight]{gitinfo2}
-\renewcommand{\gitMark}{\gitAbbrevHash{} \textbullet{} \gitAuthorName{} \textbullet{} \gitAuthorIsoDate}
-
 
 \usepackage[framemethod=TikZ]{mdframed}
 \usepackage{lipsum}
-
 
 \mdfdefinestyle{Solução}{%
     linecolor=blue,
@@ -92,35 +84,13 @@ mathb7 <8-9> mathb8 <9-10> mathb9 <10-12> mathb10 <12-> mathb12 }{}
 \DeclareSymbolFont{mathb}{U}{mathb}{m}{n}
 
 
+\newcommand{\exercicio}[1]{\subsection{Exercício #1} \textcolor{blue}{\bf(#1)}}
+\newcommand{\dividiritens}[1]{\begin{tasks}[counter-format={(tsk[a])},label-width=3.6ex, label-format = {\bfseries}, column-sep = {0pt}](1) #1 \end{tasks}}
 
+\newcommand{\dividiritensdiv}[2]{\begin{tasks}[counter-format={(tsk[a])},label-width=3.6ex, label-format = {\bfseries}, column-sep = {0pt}](#1) #2 \end{tasks}}
 
+\newcommand{\pers}[1]{\textcolor{Floresta}{$\negrito{(#1)} $}}
 
-\usepackage{listings}
-\lstset{ %
-language=Java,                  % choose the language of the code
-basicstyle=\footnotesize,       % the size of the fonts that are used for the code
-numbers=left,                   % where to put the line-numbers
-numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-stepnumber=1,                   % the step between two line-numbers. If it's 1 each line will be numbered
-numbersep=5pt,                  % how far the line-numbers are from the code
-showspaces=false,               % show spaces adding particular underscores
-showstringspaces=false,         % underline spaces within strings
-showtabs=false,                 % show tabs within strings adding particular underscores
-frame=single,	                % adds a frame around the code
-framerule=0.6pt,
-tabsize=2,	                    % sets default tabsize to 2 spaces
-captionpos=b,                   % sets the caption-position to bottom
-breaklines=true,                % sets automatic line breaking
-breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
-escapeinside={\%*}{*)},         % if you want to add a comment within your code
-backgroundcolor=\color[rgb]{1.0,1.0,1.0}, % choose the background color.
-rulecolor=\color[rgb]{0.8,0.8,0.8},
-extendedchars=true,
-xleftmargin=10pt,
-xrightmargin=10pt,
-framexleftmargin=10pt,
-framexrightmargin=10pt
-}
-
-
-
+\newcommand{\solucao}[1]{
+\textbf{\\ \\ \textcolor{red}{Solução:}} #1}
+\newcommand{\figura}[1]{\input Arquivos_de_figs_Exercicios/#1} %Adicionar figuras do latex
