Update on Overleaf.

--- a/common.sty
+++ b/common.sty
@@ -22,9 +22,9 @@
 
 %----------------- Colors ---------------------%
 
-\usepackage{colorspace}
-\usepackage{graphicx,color}
-\usepackage{xcolor}
+\
+\usepackage[dvipsnames,usenames]{xcolor}
+
 %% -------- https://www.colorspire.com/rgb-color-wheel/ -------------%%
 \definecolor{Floresta}{rgb}{0.13,0.54,0.13}
 \definecolor{Rosadif}{rgb}{0.6196,0.1254,0.6980} %9E20B2
