Update on Overleaf.

--- a/common.sty
+++ b/common.sty
@@ -2,7 +2,7 @@
 %------------------- General ---------------------%
 
 \usepackage[portuguese]{babel} 
-\usepackage[utf8]{inputenc} 
+\usepackage{inputenc} 
 \usepackage[T1]{fontenc} 
 \usepackage{hyperref}
 \usepackage{verbatim}
